--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -23,6 +23,9 @@
           </div>
         </div>
       </div>
+      <div ng-click="takeSnapshot()">
+        <i class="fa fa-camera" aria-hidden="true"></i>
+      </div>
       <div class="row" style="padding:10px;padding-bottom:0px">
         <div class="col-md-8" style="padding-right:0px;">
           <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i> <span style="font-size:18px;">{{data.uid}}</span>
