--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -109,7 +109,7 @@
   </div>
 </div>
 
-<div class="row text-center" style="padding:15px;">
+<div class="container-fluid text-center" style="padding:15px;">
   <button type="button" class="btn btn-default" ng-click="showMore()" >Show More</button>
 </div>
 
