--- a/PIM/static/ngTemplates/app.home.calendar.html
+++ b/PIM/static/ngTemplates/app.home.calendar.html
@@ -14,7 +14,7 @@
       </div>
 
     </div>
-    <div class="row bg-purple dayInfoBox" style="max-height:350px;overflow:auto;">
+    <div class="row bg-green dayInfoBox" style="max-height:350px;overflow:auto;">
       <!-- <div class=" dayDetails">
         <div class="">
           <i class="fa fa-clock-o fa fa-3x pull-left"></i> <i class="fa fa-sign-in"></i> : 2:26pm
