--- a/businessManagement/static/ngTemplates/businessManagement.html
+++ b/businessManagement/static/ngTemplates/businessManagement.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid " >
   <div class="row">
-    <div class="col-md-12 " style="padding-left:0px;padding-right:0px;">
+    <div class="col-md-12 " style="padding-left:0px;padding-right:0px;overflow-x:hidden">
       <div ui-view></div>
     </div>
   </div>
