--- a/PIM/static/ngTemplates/app.home.files.html
+++ b/PIM/static/ngTemplates/app.home.files.html
@@ -15,8 +15,11 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3" ng-repeat ="img in allImages" style="padding-top:20px">
-      {{img}}<br/>
-        <img ng-src="{{img}}" style="width:200px;height:200px">
+    <div class="col-md-3" ng-repeat="img in allImages" style="padding-top:20px;padding-right:20px" ng-mouseover="deleteObjOption=true" ng-mouseleave="deleteObjOption=false">
+      {{img}}<br />
+      <span>
+        <i ng-show="deleteObjOption" ng-click = "removeMedia($index,img)" class="fa fa-times fa-3x" style="position:absolute;top:-5px;right:0px;text-align: center;z-index:10;cursor:pointer"></i>
+      </span>
+      <img ng-src="{{img}}" style="width:100%;height:200px">
+    </div>
   </div>
-</div>
