--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -79,13 +79,22 @@
           </div>
         </div>
       </div>
-
-      <div class="form-group">
-        <label>Product Meta</label>
-        <input type="text" class="form-control" ng-model="product.productMeta" uib-typeahead="meta as meta.description for meta in searchTaxCode($viewValue)" ng-if="!showTaxCodeDetails">
-        <span ng-if="showTaxCodeDetails"> <button type="button" class="btn btn-default btn-sm" ng-click="product.productMeta = ''">
-          Edit <i class="fa fa-pencil"></i>
-        </button> <br> {{product.productMeta.description}} <br><strong>Code Type : </strong> {{product.productMeta.typ}} <br> <strong>Code : </strong> {{product.productMeta.code}} <br> <strong>Tax Rate :</strong>{{product.productMeta.taxRate}}</span>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Product Meta</label>
+            <input type="text" class="form-control" ng-model="product.productMeta" uib-typeahead="meta as meta.description for meta in searchTaxCode($viewValue)" ng-if="!showTaxCodeDetails">
+            <span ng-if="showTaxCodeDetails"> <button type="button" class="btn btn-default btn-sm" ng-click="product.productMeta = ''">
+                Edit <i class="fa fa-pencil"></i>
+              </button> <br> {{product.productMeta.description}} <br><strong>Code Type : </strong> {{product.productMeta.typ}} <br> <strong>Code : </strong> {{product.productMeta.code}} <br> <strong>Tax Rate :</strong>{{product.productMeta.taxRate}}</span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Gross Weight</label>
+            <input type="text" class="form-control" ng-model="product.grossWeight">
+          </div>
+        </div>
       </div>
 
       <div class="row">
@@ -201,13 +210,13 @@
           <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top: 15px;" ng-repeat="data in productData">
             <div class="row" style="padding: 15px;min-height:100px;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
               <div class="col-md-12">
-                <span><strong>Secondary SKU:</strong>{{data.sku}}</span><br/>
-                <span><strong>Serial Id : </strong>{{data.serialId}}</span><br/>
-                <span><strong>Units / Pack:</strong>{{data.unitPerpack}}</span><br/>
+                <span><strong>Secondary SKU:</strong>{{data.sku}}</span><br />
+                <span><strong>Serial Id : </strong>{{data.serialId}}</span><br />
+                <span><strong>Units / Pack:</strong>{{data.unitPerpack}}</span><br />
                 <span><strong>Price : </strong>{{data.price}}</span>
                 <!-- <a href="{{data.attachment}}" target="_blank" class="btn btn-primary pull-right" > <i class="fa fa-download" ></i></a> -->
-                <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
-                  style="padding-bottom: 9px;"> <i class="fa fa-trash fa-lg"></i> </button>
+                <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default"
+                  class="btn-danger btn-sm  pull-right" style="padding-bottom: 9px;"> <i class="fa fa-trash fa-lg"></i> </button>
               </div>
             </div>
           </div>
@@ -274,7 +283,7 @@
         <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top:15px;" ng-repeat="c in categoriesList">
           <div class="row" style="padding:15px">
             <div class="col-md-11">
-              <span><strong>Name : </strong> {{c.category.name}}</span><br/><br/>
+              <span><strong>Name : </strong> {{c.category.name}}</span><br /><br />
               <span><strong>Quantity : </strong> {{c.qty}}</span>
             </div>
             <div class="col-md-1">
