--- a/PIM/static/ngTemplates/app.home.files.html
+++ b/PIM/static/ngTemplates/app.home.files.html
@@ -1,13 +1,14 @@
 <div class="shaddowed card bg-white" style="min-height:93vh;position:relative;padding-right:20px;padding-left:20px">
   <breadcrumb></breadcrumb>
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-9">
       <div class="form-group  pull-right">
-        <!-- <label> Upload {{data.form.mediaType | humanize}}</label> -->
-        <label> Upload </label>
-        <input type="file" file-model="data.form.file">
+        <input type="file" file-model="file">
         <p class="help-block">Select the file.</p>
       </div>
+    </div>
+    <div class="col-md-1">
+      <button class="btn btn-primary" ng-click="addMedia()">Save</button>
     </div>
     <div class="col-md-2 ">
       <span style="margin-right:10px;font-size:18px">Static</span>
@@ -18,7 +19,7 @@
     <div class="col-md-3" ng-repeat="img in allImages" style="padding-top:20px;padding-right:20px" ng-mouseover="deleteObjOption=true" ng-mouseleave="deleteObjOption=false">
       {{img}}<br />
       <span>
-        <i ng-show="deleteObjOption" ng-click = "removeMedia($index,img)" class="fa fa-times fa-3x" style="position:absolute;top:-5px;right:0px;text-align: center;z-index:10;cursor:pointer"></i>
+        <i ng-show="deleteObjOption" ng-click="removeMedia($index,img)" class="fa fa-times fa-3x" style="position:absolute;top:-5px;right:0px;text-align: center;z-index:10;cursor:pointer"></i>
       </span>
       <img ng-src="{{img}}" style="width:100%;height:200px">
     </div>
