--- a/PIM/static/ngTemplates/app.home.files.html
+++ b/PIM/static/ngTemplates/app.home.files.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-9">
       <div class="form-group  pull-right">
-        <input type="file" file-model="file">
+        <input type="file" file-model="form.file">
         <p class="help-block">Select the file.</p>
       </div>
     </div>
