--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -186,7 +186,7 @@
 </div>
 
 
-<div ng-if="$state.is('ecommerce')&& !bannerText&&bannerImage" style="position:relative;padding-top:65px;height:51vh;margin-bottom:10px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
+<div ng-if="$state.is('ecommerce')&& !bannerText&&bannerImage" style="position:relative;padding-top:65px;margin-bottom:10px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
 
 
       <ng-owl-carousel class="owl-theme" owl-items="slide.banners" owl-properties="properties" owl-ready="ready($api)">
