--- a/support/static/ngTemplates/app.customer.email.info.html
+++ b/support/static/ngTemplates/app.customer.email.info.html
@@ -17,6 +17,8 @@
             <option value="others">Others</option>
             <option value="credit">Credit</option>
             <option value="debit">Debit</option>
+            <option value="SPAM">SPAM</option>
+            <option value="SOCIAL">SOCIAL</option>
           </select>
         </span>
       </h4>
