--- a/support/static/ngTemplates/app.customers.html
+++ b/support/static/ngTemplates/app.customers.html
@@ -2,13 +2,13 @@
   <breadcrumb></breadcrumb>
   <div class="container-fluid">
     <uib-tabset>
-      <uib-tab ng-if="createPerm">
+      <!-- <uib-tab ng-if="createPerm">
         <uib-tab-heading>
           New <i class="fa fa-plus"></i>
         </uib-tab-heading>
         <div ng-include="'/static/ngTemplates/app.customers.form.html'">
         </div>
-      </uib-tab>
+      </uib-tab> -->
       <uib-tab active="searchTabActive">
         <uib-tab-heading>
           Browse
