--- a/ecommerce/static/ngTemplates/app.ecommerce.account.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.html
@@ -1,7 +1,7 @@
 
 
 <div class="container-fluid hidden-sm hidden-xs" style="margin:0px;">
-  <div class="col-md-10 col-md-offset-1 card bg-white" style="display:block;position:relative;min-height:760px;padding-left:0px;">
+  <div class="col-md-10 col-md-offset-1 card bg-white" style="display:block;position:relative;min-height:760px;padding-left:0px;{{topLevelMenu?'margin-top:5vh':''}}">
     <div class="col-md-2 " style="position:absolute; height:100%;background-color:var(--themeColor)">
       <div ui-view="menu"></div>
     </div>
