--- a/support/static/ngTemplates/app.support.review.fullChat.modal.html
+++ b/support/static/ngTemplates/app.support.review.fullChat.modal.html
@@ -1,4 +1,4 @@
-<div class="modal-body">
+n<div class="modal-body">
   <div class="container-fluid">
     <h3>{{fullChatData[0].uid}}<span class="pull-right"><strong>Status : </strong>{{chatThreadData.status | humanize}}</span></h3><hr>
     <div class="row">
