--- a/PIM/static/ngTemplates/app.home.profile.html
+++ b/PIM/static/ngTemplates/app.home.profile.html
@@ -451,6 +451,10 @@
             <div class="col-md-6">
               {{payroll.noticePeriodRecovery? 'YES':'NO'}}
             </div>
+          <div class="row">
+            <div class="col-md-12 text-right">
+               <button type="button" style="padding-top:4px;margin:10px 25px 0 0" class= "btn btn-primary" name="button" ng-click="">Create</button>
+            </div>
           </div>
         </div>
       </div>
