--- a/PIM/static/ngTemplates/app.home.profile.html
+++ b/PIM/static/ngTemplates/app.home.profile.html
@@ -453,7 +453,7 @@
             </div>
           <div class="row">
             <div class="col-md-12 text-right">
-               <button type="button" style="padding-top:4px;margin:10px 50px; 0 0" class= "btn btn-primary" name="button" ng-click="openModal()">Open Modal</button>
+               <button type="button" style="padding-top:4px;margin:10px 50px; 0 0" class= "btn btn-primary" name="button" ng-click="openModal(payroll)">payroll</button>
             </div>
           </div>
         </div>
