--- a/PIM/static/ngTemplates/app.home.profile.modal.html
+++ b/PIM/static/ngTemplates/app.home.profile.modal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  Modal
+  <p class="text-center"> Modal</p>
 </div>
 
 <div class="modal-body" >
@@ -8,15 +8,15 @@
       <div class="container-fluid">
         <div class="row text-center" style="margin-bottom:10px">
           <ul class="pager">
-            <li class=""><a href="" ng-click="prev()"><span aria-hidden="true">&larr;</span> Prev</a></li>
-            <li class=""><a href="" ng-click="next()">Next <span aria-hidden="true">&rarr;</span></a></li>
+            <li class="previous {{currentYear==joiningDateYear? 'disabled':''}}"><a href="" ng-click="prev()"><span aria-hidden="true">&larr;</span> Prev</a></li>
+            <li class="next {{currentYear==lastWorkingYear? 'disabled':''}}"><a href="" ng-click="next()">Next <span aria-hidden="true">&rarr;</span></a></li>
           </ul>
-          <span style="font-size:20px;">Year</span>
+          <span style="font-size:20px;">{{ currentYear }}</span>
         </div>
 
-        <table class="" style=" width: 100%;border-collapse: collapse;">
-          <tr ng-repeat ="">
-            <td><span>Month</span></td>
+        <table class="invoiceTable" style=" width: 100%;border-collapse: collapse;">
+          <tr ng-repeat="month in monthsData">
+            <td><span>{{ month }}</span><span></td>
           </tr>
 
         </table>
